        - Give back transparent versioned 'remove','unpack','configure'
          actions and versionful check. Heavy hacks didn't guarantee full
          correctness, no reason to have them anymore.
        - Don't introduce action loops when uniting 'remove' and 'unpack'
          actions. This has to fix upgrading of packages containing
          'Pre-Depends' dependencies finally.
      - Resolver:
        - Use 'cupt::resolver::no-remove' option instead of 'no-remove' internal
          param.
        - Use 'cupt::resolver::type' option instead of 'resolver-type' internal
          param.
        - Check 'cupt::resolver::type' option for validity.
        - Use 'cupt::resolver::max-solution-count' option instead of
          'max-solution-cont' internal param.
        - [API break] Removed 'set_params' method, it is not needed anymore.
    - Cache:
      - Typo fix: 'incorrent' -> 'incorrect'. Thanks to
        Stefano Zacchiroli <zack@debian.org>.
      - Implemented 'easy' type of sources.list entry. Thanks to
        Stefano Zacchiroli <zack@debian.org>.
      - Don't choke on empty-for-us index files. Thanks to
        Stefano Zacchiroli <zack@debian.org>.
      - BinaryVersion:
        - [API break] Advanced return value for 'uris' method.
        - 'uris' method: filter duplicates.
    - Config:
      - New configuration option 'cupt::resolver::no-remove'.
      - New configuration option 'cupt::resolver::type'.
      - New configuration option 'cupt::resolver::max-solution-count'.
      - Changed default value for option
        'cupt::downloader::max-simultaneous-downloads' from 3 to 2.
      - Warn, don't error, on setting unknown list option, just like for
        regular options. Thanks to Stefano Zacchiroli <zack@debian.org>.
      - Skip broken parts of config files and warn, don't immediately stop.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Fri, 01 May 2009 13:12:00 +0300

cupt (0.1.1.1) experimental; urgency=low

  * debian/control: