@@ -30,6 +30,8 @@ cupt (0.1.2) UNRELEASED; urgency=low
         - Don't introduce action loops when uniting 'remove' and 'unpack'
           actions. This has to fix upgrading of packages containing
           'Pre-Depends' dependencies finally.
+        - Put also installed and downgraded packages to package list version 1
+          output for hooks. Dpkg-preconfigure should now work fully under Cupt.
       - Resolver:
         - Use 'cupt::resolver::no-remove' option instead of 'no-remove' internal
           param.
